--- a/index-START.html
+++ b/index-START.html
@@ -37,7 +37,21 @@
       text, //text = text,
       done: false
     }
-    console.log(item);
+
+    items.push(item);
+    populateList(items, itemsList);
+    this.reset(); //clears the text box after adding item. this == form element 
+  }
+
+  function populateList(plates = [], platesList) {
+    platesList.innerHTML = plates.map((plate, i) => {
+      return `
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''}/>
+          <label for="">${plate.text}</label>
+        </li>
+      `;
+    }).join('');
   }
 
   addItems.addEventListener('submit', addItem);
