--- a/index-START.html
+++ b/index-START.html
@@ -28,7 +28,7 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
 
   function addItem(e) {
     e.preventDefault();
@@ -40,6 +40,7 @@
 
     items.push(item);
     populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(itmes));
     this.reset(); //clears the text box after adding item. this == form element 
   }
 
@@ -48,13 +49,15 @@
       return `
         <li>
           <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''}/>
-          <label for="">${plate.text}</label>
+          <label for="item${i}">${plate.text}</label>
         </li>
       `;
     }).join('');
   }
 
   addItems.addEventListener('submit', addItem);
+
+  populateList(items, itemsList);
 </script>
 
 
