--- a/index-START.html
+++ b/index-START.html
@@ -40,7 +40,7 @@
 
     items.push(item);
     populateList(items, itemsList);
-    localStorage.setItem('items', JSON.stringify(itmes));
+    localStorage.setItem('items', JSON.stringify(items));
     this.reset(); //clears the text box after adding item. this == form element 
   }
 
@@ -55,7 +55,17 @@
     }).join('');
   }
 
+  function toggleDone(e) {
+    if (!e.target.matches('input')) return;
+    const el = e.target;
+    const index = el.dataset.index;
+    items[index].done = !items[index].done;
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
   addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone);
 
   populateList(items, itemsList);
 </script>
